--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   
   <div id="container">
     <video id="video" class="video-js vjs-default-skin" controls
-      preload="auto" width="610" height="322" poster="http://placekitten.com/610/322"
+      preload="auto" width="610" height="322"
       data-setup="{}">
       
-      <source src="video.mp4" type='video/mp4'>
-      <source src="video.webm" type='video/webm'>
+      <source src="videos/cs.mp4" type='video/mp4'>
+      <source src="videos/cs.webm" type='video/webm'>
     </video>
   </div>
   
